online page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -71,8 +71,8 @@
 <div class="submenu">
     <div class="pb-main pb-clear-fix">
         <div class="submenuWrapper">
-            <a href="tel:833.210.CODE" class="submenuLink">833.210.CODE</a>
-            <a href="mailto:office@codeadvantage.org" class="submenuLink">office@codeadvantage.org</a>
+            <!-- <a href="tel:833.210.CODE" class="submenuLink">833.210.CODE</a>
+            <a href="mailto:office@codeadvantage.org" class="submenuLink">office@codeadvantage.org</a> -->
             <a href="/portal" class="portalBtn">Portal Log In</a>
         </div>
     </div>
@@ -144,29 +144,7 @@
     <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
         <a href="#"><span></span> <i>My Friends </i> Online</a>
     </li>
-    <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children sf-mega-enable-0  ">
-        <a href="/school-programs">After School</a>
-        <ul>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes"><span></span>Classes</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/grades"><span></span>Classes by Grade</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/age"><span></span>Classes by Age</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/tech-and-arts"><span></span>Technology and Arts Exploration</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/robotics"><span></span>Robotics</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/coding"><span></span>Coding</a>
-            </li>
-        </ul>
-    </li> -->
+
     <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
         <a href="#"><span></span> 1:1 Tutoring</a>
     </li>
@@ -205,7 +183,7 @@
     <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
         <a href="/contact"><span></span>Contact</a>
     </li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
+    <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
         <a href="#"><span></span>Free Trial!</a>
     </li>
 </ul>
@@ -262,30 +240,6 @@
              <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                 <a href="/special-offers">-- Special Offers</a>
             </li>
-            <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/private-classes">Private Classes</a>
-            </li> -->
-            <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                <a href="/school-programs"><span></span>After School</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page ">
-                <a href="/classes">-- Classes</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/grades">-- Classes by Grade</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/age">-- Classes by Age</a>
-            </li>                       
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/tech-and-arts">-- Technology and Arts Exploration</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/robotics">-- Robotics</a>
-            </li>
-            <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                <a href="/classes/coding">-- Coding</a>
-            </li> -->
             <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
                 <a href="/school-programs"><span></span> <i>My Friends</i>  Online</a>
             </li>
@@ -319,6 +273,9 @@
 
             <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                 <a href="/contact">Contact</a>
+            </li>
+            <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-special">
+                <a href="#"><span></span>Free Trial!</a>
             </li>
         </ul>
     </div>
@@ -378,13 +335,12 @@
                 <div class="rows">
                     <article style="padding: 0 0 30px;">
                         <p>
-                            CodeAdvantage online coding classes are a virtual oasis, where children connect with like-minded friends, have real fun, and learn to actually create exciting things with code (not just play). 
+                            In this time of education uncertainty, CodeAdvantage provides a vibrant learning path where children look forward to their classes, opt into extra enrichment activities, and create exciting new things with code!
                         </p>
                         <p>
-                            In this time of education uncertainty—when so many of us have shifted our focus from getting ahead to simply not falling behind—6 to 13-year-old CodeAdvantage learners are gaining high-value, real-world skills that will someday help them land their first internships.
-                        </p>
+                            Through LIVE online instruction and a project-based curriculum, our learners have fun, connect, and grow. And, with choices for small group and private online classes, CodeAdvantage can fit into what ever learning path you have chosen this year—remote schooling, learning pods, homeschooling, or even a hybrid approach.                         </p>
                         <p>
-                            Our pricing is reasonable—especially for live instruction—and we have made it a customer service priority to make scheduling easy on you.
+                            Our classes start at $165 for ten hours of instruction, and we have made it a customer service priority to make scheduling easy on you.
                         </p>
 
                         <div class="warningText textCenter">
@@ -457,27 +413,87 @@
                                 </div>
                             </div>
                         </div>
+                        <blockquote class="blockquote textCenter">
+                            <p>
+                                <b>
+                                    <i>
+                                        The quality of your classes has been amazing. You are doing better with online learning than my son's small private school! He loves his classes and the instructors! We will be signing up for many more classes into the fall. Thank you for being there for us during these times!!!                                    </i>
+                                </b>  
+                                — CodeAdvantage Parent
+                            </p>
+                        </blockquote>   
+
                     </article>
                     <aside>
                         <div class="sideBanner">
-                            <img class="sideBanner__up" src="/CA/uploads/boy_600x423.jpg" alt="CodeAdvantage Parent">
-                            <div class="sideBanner__down textCenter">
-                                <p>
-                                    <i>
-                                        The quality of your classes has been amazing. You are doing better with online learning than my son's small private school! He loves his classes and the instructors! 
-                                    </i>
-                                </p>
-                                <p>
-                                    <i>
-                                        We will be signing up for many more classes into the fall. Thank you for being there for us during these times!!!
-                                       
-                                    </i>
-                                    
-                                </p>
-                                <p>
-                                    — CodeAdvantage Parent 
-                                </p>
+                            <div class="sideBanner__down bgOrange">
+                                <h5 class="h5">
+                                    <strong>
+                                        Benefits beyond the class. 
+                                    </strong>
+                                </h5>
+                                <ul>
+                                    <li>
+                                        <p>
+                                             Access to an online portal that maps the learning journey. 
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>
+                                            Concept review tools.
+                                        </p>
+                                        
+                                    </li>
+                                    <li>
+                                        <p>
+                                        Additional enrichment activities.
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p> Digital badging.</p>
+                                    </li>
+                                    <li>
+                                        <p>
+                                          Class time text reminders!  
+                                        </p>
+                                    </li>
+                                </ul>
                             </div>
+                        </div>
+                        <div class="sideBanner">
+                                <div class="containerProgress">
+                                    <div class="cardProgress">
+                                        <div class="face face1">
+                                            <div class="content">
+                                                <img src="/CA/uploads/trophy-1-150x150.png">
+                                                <h3> Python Level 1</h3>
+                                            </div>
+                                        </div>
+                                        <div class="face face2">
+                                            <div class="content">
+                                                <h5>Congratulations Dylan on completing  Python Level 1!</h5>
+                                                <p>In this class you mastered the following skills:</p>
+                                                <ul>
+                                                    <li>
+                                                        <p>Created basic scripts to run collections of commands</p>
+                                                    </li>
+                                                    <li>
+                                                        <p>Designed functions to handle user-defined operations</p>
+                                                    </li>
+                                                    <li>
+                                                        <p>
+                                                            Developed playable games like the&nbsp; Random&nbsp;Number Guessing game and Hangman
+                                                        </p>
+                                                    </li>
+                                                </ul>
+                                                <p>
+                                                    You are a master of the basics of Python, as well as general code design. You can show off your new skills and games, add to them and try your hand at creating your own functional games!
+
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="sideBanner">
