online page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -421,7 +421,25 @@
                                 </b>  
                                 — CodeAdvantage Parent
                             </p>
-                        </blockquote>   
+                        </blockquote>
+                        
+                        <h2 class="h2 textCenter">
+                            CodeAdvantage featured in the press:
+                        </h2>
+
+                        <div class="pressBlock">
+                            <a href="https://www8.gsb.columbia.edu/articles/columbia-business/coding-classes-kids-mark-shift-educational-priorities" title="Writing the Code for Success" target="_blank">
+                                <img class="alignnone size-medium wp-image-2130" src="/CA/uploads/ColumbiaUniversity-1-150x300.png" alt="Columbia University" width="200" height="100" />
+                            </a>
+                            <a href="https://www.timeout.com/new-york-kids/things-to-do/codeadvantage" target="_blank" title="CodeAdvantage in Time Out">
+                                <img class="alignnone size-medium wp-image-2137" src="/CA/uploads/Times-Out-1-300x300.png" alt="Time Out New York" width="100" height="100" />
+                            </a>
+                            <a href="https://vimeo.com/237738680" title="CodeAdvantage Makes Coding Accessible for Kids" target="_blank">
+                                <img class="alignnone size-medium wp-image-2136" src="/CA/uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
+                            </a>
+                            <a href="https://mommypoppins.com/new-york-city-kids/directory/virtual/codeadvantage" title="CodeAdvantage on MommyPoppins" target="_blank">
+                                <img class="alignnone size-medium wp-image-2133" src="/CA/uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
+                            </a
 
                     </article>
                     <aside>
@@ -502,7 +520,7 @@
                                     <img class="vp-img" src="/CA/uploads/vc-play3.png"  alt="CA Online Classes">
                                 </a>
                             </div>
-                            <div class="sideBanner__down textCenter">
+                            <div class="sideBanner__down">
                                 <form action="" id="onlineEmail">
                                     <p>
                                         For news & special offers, subscribe to our mailing list!
@@ -516,10 +534,10 @@
                 </div>
             </div>
         </section>
-        <section>  
+        <!-- <section>  
             <div class="container">
                 <div class="rows">
-                    <img class="size-medium wp-image-2206 aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
                 <div class="rows">
                     <article>
@@ -547,7 +565,7 @@
                     <img class="size-medium wp-image-2206 aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section>
             <div class="container">
