online page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -439,7 +439,8 @@
                             </a>
                             <a href="https://mommypoppins.com/new-york-city-kids/directory/virtual/codeadvantage" title="CodeAdvantage on MommyPoppins" target="_blank">
                                 <img class="alignnone size-medium wp-image-2133" src="/CA/uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
-                            </a
+                            </a>
+                        </div>
 
                     </article>
                     <aside>
@@ -530,42 +531,26 @@
                                 </form>
                             </div>
                         </div>
+                        <div class="sideBanner">
+                            <div class="sideBanner__down textCenter">
+                                <h5 class="h5">
+                                    <strong>It's the  little things.</strong>
+                                </h5>
+                                <p>
+                                    With fluid family schedules, even the most organized parent can forget a class. We get it! So, we send a gentle text nudge if your child is unexpectedly missing from a session.
+                                </p>
+                                <div class="supportChat">
+                                    <img src="/CA/uploads/suppurtchat.PNG" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </aside>
+                </div>
+                <div class="rows">
+                    <img class="size-medium  divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
             </div>
         </section>
-        <!-- <section>  
-            <div class="container">
-                <div class="rows">
-                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
-                </div>
-                <div class="rows">
-                    <article>
-                        <h2 class="h2 textCenter">
-                            CodeAdvantage featured in the press:
-                        </h2>
-
-                        <div class="pressBlock">
-                            <a href="https://www8.gsb.columbia.edu/articles/columbia-business/coding-classes-kids-mark-shift-educational-priorities" title="Writing the Code for Success" target="_blank">
-                                <img class="alignnone size-medium wp-image-2130" src="/CA/uploads/ColumbiaUniversity-1-150x300.png" alt="Columbia University" width="200" height="100" />
-                            </a>
-                            <a href="https://www.timeout.com/new-york-kids/things-to-do/codeadvantage" target="_blank" title="CodeAdvantage in Time Out">
-                                <img class="alignnone size-medium wp-image-2137" src="/CA/uploads/Times-Out-1-300x300.png" alt="Time Out New York" width="100" height="100" />
-                            </a>
-                            <a href="https://vimeo.com/237738680" title="CodeAdvantage Makes Coding Accessible for Kids" target="_blank">
-                                <img class="alignnone size-medium wp-image-2136" src="/CA/uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
-                            </a>
-                            <a href="https://mommypoppins.com/new-york-city-kids/directory/virtual/codeadvantage" title="CodeAdvantage on MommyPoppins" target="_blank">
-                                <img class="alignnone size-medium wp-image-2133" src="/CA/uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
-                            </a>
-                        </div>
-                    </article>
-                </div>
-                <div class="rows">
-                    <img class="size-medium wp-image-2206 aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
-                </div>
-            </div>
-        </section> -->
 
         <section>
             <div class="container">
