online page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -376,7 +376,7 @@
                             </li>
                         </ol>
                         <h4 class="h4"><a href="#" style="text-decoration: none;">Find Classes to Fit your Child’s Grade Level</a></h4>
-                        <div id="schemes" class="pb-text">
+                        <div id="schemes" class="pb-text mb-middle">
                             <div class="wrapper online">
                                 <div class="heading k border">K</div>
                                 <div class="heading one border">1</div>
@@ -413,7 +413,7 @@
                                 </div>
                             </div>
                         </div>
-                        <blockquote class="blockquote textCenter">
+                        <blockquote class="blockquote mb-middle">
                             <p>
                                 <b>
                                     <i>
@@ -537,7 +537,7 @@
                                     <strong>It's the  little things.</strong>
                                 </h5>
                                 <p>
-                                    With fluid family schedules, even the most organized parent can forget a class. We get it! So, we send a gentle text nudge if your child is unexpectedly missing from a session.
+                                    We send a text reminder if your child is unexpectedly missing from a session.
                                 </p>
                                 <div class="supportChat">
                                     <img src="/CA/uploads/suppurtchat.PNG" alt="">
