--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1067,6 +1067,7 @@ aside {
   list-style: none;
   padding-left: 25px;
   position: relative;
+  margin: 0;
 }
 
 .sideBanner li:before {
@@ -1110,7 +1111,7 @@ aside {
  }
 
 .blockquote {
-  margin: 3em 0;
+  margin: 2em 0;
 }
 
 .blockquote p {
