--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -376,7 +376,7 @@
                             </li>
                         </ol>
                         <h4 class="h4"><a href="#" style="text-decoration: none;">Find Classes to Fit your Child’s Grade Level</a></h4>
-                        <div id="schemes" class="pb-text mb-middle">
+                        <div id="schemes" class="pb-text">
                             <div class="wrapper online">
                                 <div class="heading k border">K</div>
                                 <div class="heading one border">1</div>
@@ -413,7 +413,7 @@
                                 </div>
                             </div>
                         </div>
-                        <blockquote class="blockquote mb-middle">
+                        <blockquote class="blockquote">
                             <p>
                                 <b>
                                     <i>
@@ -717,7 +717,7 @@
         <section>
             <div class="container">
                 <div class="rows">
-                    <img class="size-medium wp-image-2206 divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
                 <div class="rows">
                     <article>
