--- a/css/style7.scss
+++ b/css/style7.scss
@@ -707,7 +707,7 @@ div.theme-footer-top .pb-testimonial ul>li>div>div.pb-testimonial-cite-up,
   }
 
 .submenuWrapper .portalBtn {
-    padding: 20px 22px 10px 20px;
+    padding: 20px 10px 10px 20px;
     color: #4ccef0;
     font-weight: bold;
     text-decoration: none;
@@ -1112,6 +1112,7 @@ aside {
 
 .blockquote {
   margin: 2em 0;
+  padding-top: 2em;
 }
 
 .blockquote p {
