--- a/css/style7.scss
+++ b/css/style7.scss
@@ -977,6 +977,7 @@ aside {
   margin-top: 25px!important;
 }
 
+
 .btn{
   border: none;
   display: inline-block;
@@ -1008,6 +1009,15 @@ aside {
 .bgOrange{
   background-color: #FE6500!important;
 }
+
+.listNum li{
+  padding-left: 25px;
+}
+
+.listNum li p{
+  padding: 5px 5px 0 5px;
+}
+
 
 .listCheck li {
   list-style: none;
