--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -239,30 +239,6 @@
                          <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/special-offers">-- Special Offers</a>
                         </li>
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/private-classes">Private Classes</a>
-                        </li> -->
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span>After School</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page ">
-                            <a href="/classes">-- Classes</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/grades">-- Classes by Grade</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/age">-- Classes by Age</a>
-                        </li>                       
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/tech-and-arts">-- Technology and Arts Exploration</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/robotics">-- Robotics</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/coding">-- Coding</a>
-                        </li> -->
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
                             <a href="/school-programs"><span></span> <i>My Friends</i>  Online</a>
                         </li>
@@ -293,9 +269,11 @@
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/coding-for-kids-blog">-- Our Blog</a>
                         </li>
-
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/contact">Contact</a>
+                        </li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-special">
+                            <a href="#"><span></span>Free Trial!</a>
                         </li>
                     </ul>
                 </div>
@@ -305,18 +283,11 @@
     </div>
 
 </div>
-<div class="pb-script-tag">
-    <script type="text/javascript">
-        jQuery(document).ready(function($)
-        {
-            $('#pb_menu_1356D2CB2EB1BA9E744C3D62316D6262').PBMenu({"responsive_mode":"768","sticky_enable":"0","hide_scroll_enable":"0","menu_animation_enable":"1","menu_animation_speed_open":"400","menu_animation_speed_close":"200","menu_animation_delay":"0","scroll_animation_enable":"1","scroll_animation_speed":"1000","scroll_animation_easing":"easeOutQuint","responsive_menu_id":"pb_menu_responsive_329AE32EDE8E62CD52ACFDC02FC60D94","responsive_menu_label":"Menu"});
-        });
-    </script>
-</div>
+
 
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section  class="sectionheader" style="
+        <section id="onlinePageHeader" class="sectionheader" style="
         background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;padding-top:60px;padding-bottom:60px;">
             <div class="container">
                 <div class="rows">
@@ -346,7 +317,7 @@
                         <p> 
                             Uncertainty is the norm, these days. But, as parents, we are persevering and putting in place new educational pathways to help to offset the impact on our children. CodeAdvantage is a great fit for your child's learning journey because even amidst the shifting environment, we are very certain of two things:
                         </p>
-                        <ol class="mb-middle">
+                        <ol class="listNum mb-middle">
                             <li>
                                 <p>Children love spending time with their friends. </p>
                             </li>
