--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -292,7 +292,7 @@
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h1>Me and My Friends</h1>
+                        <h1 class="h1">Me and My Friends</h1>
                     </article>
                 </div>
             </div>
