--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1010,10 +1010,9 @@ aside {
   background-color: #FE6500!important;
 }
 
-.listNum li{
-  padding-left: 25px;
+.listNum{
+  padding-left: 15px;
 }
-
 .listNum li p{
   padding: 5px 5px 0 5px;
 }
