--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -287,7 +287,7 @@
 
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section id="onlinePageHeader" class="sectionheader" style="
+        <section class="sectionheader" style="
         background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;padding-top:60px;padding-bottom:60px;">
             <div class="container">
                 <div class="rows">
