online page fix

--- a/css/style7.css
+++ b/css/style7.css
@@ -4139,6 +4139,12 @@ aside {
   margin: 0 20px;
 }
 
+.pressBlock a img:hover {
+  margin: 0 20px;
+  -webkit-filter: brightness(1.75);
+          filter: brightness(1.75);
+}
+
 .leftimg {
   float: left;
   margin: 7px 7px 7px 0;
