--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -338,11 +338,11 @@
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
         <section class="sectionheader" style="
-        background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;padding-top:60px;padding-bottom:60px;height:400px;">
+        background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;padding-top:100px;padding-bottom:60px;height:400px;">
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h1 class="h1">Me and My Friends</h1>
+                        <h1>Me and My Friends</h1>
                     </article>
                 </div>
             </div>
