--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -337,12 +337,12 @@
 </div>
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section class="sectionheader" id="onlinePageHeader" style="
-        background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;">
+        <section class="sectionheader"  style="
+        background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;padding:60px 0;">
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h1 class="h1">Me and My Friends</h1>
+                        <h1>Me and My Friends</h1>
                     </article>
                 </div>
             </div>
