--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -517,7 +517,8 @@
                             <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>
                             <div class="textWithImgBlock__text">
                                 <p class="mt-middle">
-                                    Our My Friends Online and Tutoring learners can also take LEGO ® – based robotics classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). For more information, please visit our Robotics Page.
+                                    Our My Friends Online and Tutoring learners can also take LEGO ® – based robotics classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
+                                    For more information, please visit our <a href="#" title="Robotics">Robotics Page</a>.
                                 </p>
                             </div>
                         </div> 
